Changed some names