@@ -1,7 +1,6 @@
 package faang.school.postservice.sort;
 
 import faang.school.postservice.model.Album;
-import faang.school.postservice.model.Comment;
 import faang.school.postservice.model.Post;
 import org.junit.jupiter.api.Test;
 
@@ -10,8 +9,8 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-class SortByCommentsTest {
-    private SortByComments sortByComments = new SortByComments();
+class SortByAlbumsSizeTest {
+    private SortByAlbumsSize sortByAlbumsSize = new SortByAlbumsSize();
 
     @Test
     void testGetComparator() {
@@ -19,13 +18,13 @@ class SortByCommentsTest {
         Post post2 = new Post();
         Post post3 = new Post();
 
-        post1.setComments(Arrays.asList(new Comment(), new Comment()));
-        post2.setComments(List.of(new Comment()));
-        post3.setComments(List.of());
+        post1.setAlbums(Arrays.asList(new Album(), new Album()));
+        post2.setAlbums(List.of(new Album()));
+        post3.setAlbums(List.of());
 
         List<Post> posts = Arrays.asList(post1, post2, post3);
 
-        posts.sort(sortByComments.getComparator());
+        posts.sort(sortByAlbumsSize.getComparator());
 
         assertEquals(post3, posts.get(0));
         assertEquals(post2, posts.get(1));
